<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/textView20"
        android:layout_width="416dp"
        android:layout_height="59dp"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:background="#4CAF50"
        android:fontFamily="@font/baloo_paaji"
        android:text="AGRO"
        android:textAlignment="center"
        android:textColor="#FFEB3B"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="55dp"
        android:layout_height="46dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/menu" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="405dp"
        android:layout_height="150dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="3dp"
        android:background="@drawable/profile_grdnt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="35dp"
            android:text="Address"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/store_name" />

        <TextView
            android:id="@+id/store_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif"
            android:text="Lakshan Stores"
            android:textColor="#000000"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="168dp"
            android:layout_height="158dp"
            android:background="@drawable/home_page_profile_user_icon_1320184041392976124"
            app:layout_constraintStart_toEndOf="@+id/store_name"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/home_page_profile_user_icon_1320184041392976124" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvshopNumber"
        android:layout_width="174dp"
        android:layout_height="27dp"
        android:layout_marginStart="252dp"
        android:clickable="true"
        android:text="@string/Delete_account_click"
        android:textColor="@color/Delete_Account"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="@dimen/delete_constraint_form_widht"
        android:layout_height="@dimen/delete_constraint_form_height"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/request_grdnt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvshopNumber">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="116dp"
            android:layout_marginTop="4dp"
            android:text="@string/Complete_request_delete_page"
            android:textColor="@color/Complete_request_delete"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="135dp"
            android:layout_marginTop="17dp"
            android:text="@string/Remove_seed_delete_page"
            android:textColor="@color/Remove_seed_delete"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvseedName" />

        <TextView
            android:id="@+id/address_lable"
            android:layout_width="160dp"
            android:layout_height="24dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="1 . Request "
            android:textColor="#1E1A1A"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="160dp"
            android:layout_height="24dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="2 . Request "
            android:textColor="#000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address_lable" />

        <TextView
            android:id="@+id/city_lable"
            android:layout_width="160dp"
            android:layout_height="24dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="3 . Request "
            android:textColor="#000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            android:id="@+id/tvseedName"
            android:layout_width="160dp"
            android:layout_height="24dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="4. Request "
            android:textColor="#000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/city_lable" />

        <Button
            android:id="@+id/button"
            android:layout_width="104dp"
            android:layout_height="36dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="18dp"
            android:backgroundTint="@color/Remove_button"
            android:text="Remove"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <Button
            android:id="@+id/button2"
            android:layout_width="104dp"
            android:layout_height="36dp"
            android:layout_marginEnd="18dp"
            android:backgroundTint="#FF6363"
            android:text="Remove"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <Button
            android:id="@+id/button3"
            android:layout_width="104dp"
            android:layout_height="36dp"
            android:layout_marginEnd="18dp"
            android:backgroundTint="#FF6363"
            android:text="Remove"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button2" />

        <Button
            android:id="@+id/button4"
            android:layout_width="104dp"
            android:layout_height="36dp"
            android:layout_marginEnd="18dp"
            android:backgroundTint="#FF6363"
            android:text="Remove"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button3" />

        <Button
            android:id="@+id/button5"
            android:layout_width="104dp"
            android:layout_height="36dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="73dp"
            android:backgroundTint="@color/Remove_seed"
            android:text="Remove"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView14" />

        <Button
            android:id="@+id/button6"
            android:layout_width="104dp"
            android:layout_height="36dp"
            android:layout_marginEnd="73dp"
            android:backgroundTint="#E91E63"
            android:text="Remove"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button5" />

        <Button
            android:id="@+id/button7"
            android:layout_width="104dp"
            android:layout_height="36dp"
            android:layout_marginEnd="73dp"
            android:backgroundTint="#E91E63"
            android:text="Remove"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button6" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="96dp"
            android:layout_height="26dp"
            android:layout_marginStart="63dp"
            android:layout_marginTop="26dp"
            android:text="@string/Remove_list_delete_page"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView14" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="96dp"
            android:layout_height="26dp"
            android:layout_marginStart="63dp"
            android:layout_marginTop="8dp"
            android:text="2 . Beans"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView15" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="96dp"
            android:layout_height="26dp"
            android:layout_marginStart="63dp"
            android:layout_marginTop="8dp"
            android:text="3 . Tomatoes"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView16" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>